[package]
authors = ['Pontem Network']
edition = '2018'
homepage = 'https://pontem.network'
license = 'Unlicense'
name = 'constants'
repository = 'https://github.com/pontem-network/pontem/'
version = '3.0.0'

[dependencies]
primitives = { path = "../primitives", default-features = false }

[features]
default = ['std']
std = [
    "primitives/std",
]
