[package]
authors = ['Pontem Network Team <https://github.com/orgs/pontem-network/people>']
description = '🚀 Pontem Node with Move VM onboard'
repository = 'https://github.com/pontem-network/pontem/'
homepage = 'https://pontem.network'
license = 'Apache-2.0'
name = 'pontem-node'
edition = '2021'
build = 'build.rs'
version = '0.5.0'

[[bin]]
name = 'pontem'
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-build-script-utils = { git = 'https://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
stdlib-fetch = { path = "../utils/stdlib-fetch" }

[dependencies]
async-io = "1.3"
futures = { version = "0.3.1", features = ["compat"] }
jsonrpc-core = '18.0'
serde_json = '1.0'
structopt = '0.3.8'
codec = { package = 'parity-scale-codec', version = '2.3.1' }
log = "0.4"
serde = { version = "1.0", features = ["derive"] }

# Substrate dependencies
frame-benchmarking = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
frame-benchmarking-cli = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
pallet-transaction-payment-rpc = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
substrate-frame-rpc-system = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
substrate-prometheus-endpoint = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }

# Substarte Client Dependencies
sc-basic-authorship = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-cli = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', features = ['wasmtime'] }
sc-client-api = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-consensus = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-executor = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', features = ['wasmtime'] }
sc-finality-grandpa = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-keystore = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-rpc = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-rpc-api = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-service = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16', features = ['wasmtime'] }
sc-telemetry = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-transaction-pool = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-tracing = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-chain-spec = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-network = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-transaction-pool-api = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sc-consensus-manual-seal = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }

# Substrate Primitive Dependencies
sp-api = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-block-builder = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-blockchain = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-consensus = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-core = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-finality-grandpa = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-inherents = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-runtime = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-transaction-pool = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-timestamp = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-session = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-offchain = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }
sp-keystore = { git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.16' }

# Nimbus dependencies
nimbus-primitives = { git = "https://github.com/pontem-network/nimbus", branch = 'polkadot-v0.9.16' }
nimbus-consensus = { git = "https://github.com/pontem-network/nimbus", branch = 'polkadot-v0.9.16' }

# Cumulus dependencies
cumulus-client-consensus-relay-chain = { git = "https://github.com/paritytech/cumulus", branch = 'polkadot-v0.9.16' }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/cumulus", branch = 'polkadot-v0.9.16' }
cumulus-client-network = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.16' }
cumulus-client-service = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.16' }
cumulus-client-cli = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.16' }
cumulus-primitives-core = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.16' }
cumulus-primitives-parachain-inherent = { git = 'https://github.com/paritytech/cumulus', branch = 'polkadot-v0.9.16' }

# Polkadot dependencies
polkadot-primitives = { git = 'http://github.com/paritytech/polkadot.git', branch = 'release-v0.9.16' }
polkadot-service = { git = 'http://github.com/paritytech/polkadot.git', branch = 'release-v0.9.16' }
polkadot-parachain = { git = 'http://github.com/paritytech/polkadot.git', branch = 'release-v0.9.16' }

# Local dependencies
pontem-runtime = { path = "../runtime" }
sp-mvm-rpc = { path = "../pallets/sp-mvm/rpc" }
sp-mvm-rpc-runtime = { path = "../pallets/sp-mvm/rpc/runtime" }
primitives = { path = "../primitives" }
constants = { path = "../constants" }


# FIXME: You MUST set the relay chain networks you wish to target in the `features` here
# Options are found here: https://github.com/paritytech/polkadot/blob/master/cli/Cargo.toml#L64-L71
#
# Alternatively to setting here, you can use cargo CLI at build time:
# https://doc.rust-lang.org/cargo/reference/features.html#command-line-feature-options
#
# ** Don't enable relay chains you don't need, as this is a **very** heavy build for no reason**
# More info: https://github.com/paritytech/polkadot/pull/3189
polkadot-cli = { git = 'http://github.com/paritytech/polkadot.git', branch = 'release-v0.9.16', features = ["kusama-native"] }

[dependencies.move-vm]
package = "mvm"
git = "https://github.com/pontem-network/sp-move-vm.git"
rev = "c8ac6f91c7ec95e62afa3ee9ef9884eec113511c"
default-features = false
features = [ "move_stdlib" ]

[features]
default = [
  'polkadot-service/westend-native',
  'polkadot-cli/westend-native',
]
runtime-benchmarks = ['pontem-runtime/runtime-benchmarks', 'polkadot-service/runtime-benchmarks']
