[package]
authors = ['Pontem Network']
edition = '2018'
homepage = 'https://pontem.network'
license = 'Unlicense'
name = 'primitives'
repository = 'https://github.com/pontem-network/pontem/'
version = '3.0.0'

[dependencies]
serde = { version = "1.0", optional = true }
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["max-encoded-len"] }
scale-info = { version = "1.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
sp-core = { default-features = false, git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }
sp-runtime = { default-features = false, git = 'http://github.com/paritytech/substrate.git', branch = 'polkadot-v0.9.11' }

[features]
default = ['std']
std = [
    "serde",
	"codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-std/std",
    "sp-runtime/std",
]
